add scss style for homepage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,17 @@
   </ul>
 
   <ul>
-    @for (leader of leaders; track $index) {
-      <li>
-        <p>{{leader.name}}</p>
-      </li>
-    }
+    <div class="row">
+      @for (leader of leaders; track $index) {
+        <div class="col-md-4">
+          <mat-card>
+            <img src="{{leader.imageUrl}}"/>
+            <p>{{leader.name}}</p>
+          </mat-card>
+        </div>
+      }
+
+    </div>
+
   </ul>
 </div>
